CHG: Updated GreySpace according to r5027 - fixed icon positioning on home page panels so it aligns with the new header font size.
git-svn-id: http://svn.montala.net/svn/resourcespace@5049 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/plugins/greyspace/css/Col-greyspace.css
+++ b/plugins/greyspace/css/Col-greyspace.css
@@ -410,7 +410,7 @@ input[readonly] {color: #E0E0E0;} /* Read-only form fields */
     padding-left: 6px;
     }
 
-.HomePanel h2 {background: url(../gfx/interface/HomeArrow.png) no-repeat 0px 6px;}
+.HomePanel h2 {background: url(../gfx/interface/HomeArrow.png) no-repeat 0px 9px;}
 
 .HomePanel {color: #E0E0E0; background: none;} /* Text in home panels */
     
